--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "version": 2,
     "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.6.0" }
+        "api/*.php": { "runtime": "vercel-php@0.6.0" },
+        "public/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
         {
@@ -10,29 +11,21 @@
             "dest": "/public/build/$1"
         },
         {
-            "src": "/(.*\\.(?:css|js|png|jpg|jpeg|gif|svg|ico|ttf|woff|woff2|eot|otf|webp|avif|txt))$",
-            "dest": "/public/$1"
-        },
-        { "src": "/(.*)", "dest": "/api/index.php" }
+            "src": "/(.*)",
+            "dest": "/public/index.php"
+        }
     ],
-    "public": true,
-    "buildCommand": "vite build",
-    "outputDirectory": "public",
     "env": {
         "APP_ENV": "production",
-        "APP_TIMEZONE": "Asia/Jakarta",
-        "APP_DEBUG": "false",
-        "APP_URL": "https://yourproductionurl.com",
-        "APP_KEY": "base64:JbbNC6IXjyMywh9yxPla8nffnzNOjeNWn3/wTnLEl00=",
+        "APP_DEBUG": "true",
+        "APP_URL": "https://${VERCEL_URL}",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "VIEW_COMPILED_PATH": "/tmp",
-        "CACHE_DRIVER": "array",
-        "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
-        "DB_CONNECTION": "mysql"
+        "LOG_CHANNEL": "stderr"
     }
 }
